--- a/Frontend/EDUFAM/src/index.css
+++ b/Frontend/EDUFAM/src/index.css
@@ -1,9 +1,17 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 /* @import "tailwindcss"; */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
 /* You can also add custom global styles here */
 body {
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.bg-edufam-dark {
+  background-color: #1e0a3c;
 }
