--- a/Frontend/EDUFAM/src/index.css
+++ b/Frontend/EDUFAM/src/index.css
@@ -1,4 +1,4 @@
-/* @import "tailwindcss"; */
+/* @import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +6,4 @@
 /* You can also add custom global styles here */
 body {
   background-color: #f5f5f5;
-}
+} 
