--- a/Frontend/EDUFAM/src/App.css
+++ b/Frontend/EDUFAM/src/App.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-/* Main Layout Styling */
-/* App Layout */
+
 #root {
   min-height: 100vh;
 }
@@ -21,7 +20,7 @@
   flex: 1;
   min-height: 100vh;
   background-color: #f8f9fa;
-  /* transition: margin-left 0.3s ease; */
+
 }
 
 /* Dashboard Header */
@@ -229,17 +228,6 @@ main {
   height: 100%;
 }
 
-/* Overlay Welcome on Spline animation */
-.spline-welcome-container {
-  flex: 1 1 auto;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  min-height: 0;
-  display: flex;
-  align-items: stretch;
-}
-
 .welcome-overlay {
   position: absolute;
   top: 50%;
@@ -255,7 +243,6 @@ main {
 }
 
 /* Footer styling */
-
 footer.footer-fullwidth {
   flex-shrink: 0;
   width: 100vw;
@@ -266,6 +253,12 @@ footer.footer-fullwidth {
   position: relative;
   left: 0;
   right: 0;
+}
+
+footer.footer-parent-dashboard {
+  width: calc(100% - 150px);
+  margin-left: 150px;
+  margin-right: 0px;
 }
 
 .footer-inner {
