--- a/Frontend/EDUFAM/src/components/ParentDashboard.css
+++ b/Frontend/EDUFAM/src/components/ParentDashboard.css
@@ -175,11 +175,22 @@ p {
   left: 0;
   width: 100%;
 }
-
 .parent-dashboard-row {
   margin-top: 100px !important;
+  min-height: calc(100vh - 100px - 80px); /* 100px navbar, 80px footer est. */
   position: relative;
   z-index: 1;
+}
+
+.sidebar {
+  height: 100%;
+  min-height: calc(100vh - 100px - 80px); /* fill to footer */
+  background: #fff;
+  border-right: 1.5px solid #e9ecef;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 40px;
 }
 
 .sidebar {
